--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-site",
-  "homepage": "https://Dylando22.github.io/my-site",
+  "homepage": "https://Dylando22.github.io/my-site/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
